Add new await method, which works without continuation, but doesn't halt execution