@@ -11,17 +11,17 @@ import java.util.Locale;
 public class LocaleBinder implements TypeBinder<Locale> {
 
     @Override
-    public Locale bind(String name, Annotation[] annotations, String value, Class actualClass, Type genericType) {
+    public Locale bind(String name, Annotation[] annotations, String value, Class<?> actualClass, Type genericType) {
         if( value == null )
             return null;
         if (value.length() == 2) {
-            return new Locale(value);
+            return Locale.of(value);
         }
         if (value.length() == 5) {
-            return new Locale(value.substring(0, 2), value.substring(3, 5));
+            return Locale.of(value.substring(0, 2), value.substring(3, 5));
         }
         if (value.length() == 8) {
-            return new Locale(value.substring(0, 2), value.substring(3, 5), value.substring(6, 8));
+            return Locale.of(value.substring(0, 2), value.substring(3, 5), value.substring(6, 8));
         }
         return null;
     }
